# aws-iac-template-generator

./: README.md  generate-template.py  manifest-schema.json  manifest.json
projects/python/fullstack-fastapi/: README.md  cookiecutter.json
projects/python/fullstack-fastapi/hooks/: post_gen_proj.py  pre_gen_proj.py
projects/python/fullstack-fastapi/{{cookiecutter.project_name}}/: Dockerfile  Dockerfile.local  README.md  requirements.txt  samconfig.toml  template.yaml
projects/python/fullstack-fastapi/{{cookiecutter.project_name}}/_future/: pyproject.toml
projects/python/fullstack-fastapi/{{cookiecutter.project_name}}/app/api/: .gitignore  README.md  main.py
projects/python/fullstack-fastapi/{{cookiecutter.project_name}}/app/api/settings/: config.py
projects/python/fullstack-fastapi/{{cookiecutter.project_name}}/app/client/: package-lock.json
projects/python/fullstack-fastapi/{{cookiecutter.project_name}}/app/client/scripts/: deploy.cjs
projects/python/fullstack-fastapi/{{cookiecutter.project_name}}/authorizer/: README.md
tools/: generate_manifest_schema.py
