[tool.poetry]
name = "{{ cookiecutter.__app_name_kebab }}"
version = "{{ cookiecutter.app_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.contact_name }} <{ {{ cookiecutter.contact_email }} }>"]
license = "MIT"
# README file(s) are used as the package description
readme = ["README.md"]

[tool.poetry.dependencies]
python = ">= {{cookiecutter.runtime}}"
annotated-types = "^0.6.0"
anyio = "^4.2.0"
black = "^23.12.1"
boto3 = "^1.34.27"
botocore = "^1.34.27"
click = "^8.1.7"
fastapi = "^0.109.0"
h11 = "^0.14.0"
httptools = "^0.6.1"
idna = "^3.6"
jmespath = "^1.0.1"
mangum = "^0.17.0"
mypy-extensions = "^1.0.0"
packaging = "^23.2"
pathspec = "^0.12.1"
platformdirs = "^4.1.0"
pydantic = "^2.5.3"
pydantic_core = "^2.14.6"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.1"
s3transfer = "^0.10.0"
six = "^1.16.0"
sniffio = "^1.3.0"
starlette = "^0.35.1"
typing_extensions = "^4.9.0"
urllib3 = "^2.0.7"
uuid = "^1.30"
uvicorn = "^0.27.0"
# uvicorn = "^0.18.2"
uvloop = "^0.19.0"
watchfiles = "^0.21.0"
websockets = "^12.0"


[tool.poetry.dev-dependencies]
 
[tool.black]
 
[build-system]


